
v0.1.5

    * better support for namespace packages and other abusers of __path__.
    * ability to record "module aliases" for cases where modules can be
      loaded under something other than their canonical names (Django template
      tag libraries, I'm looking in your direction...)

v0.1.4

    * implement basic integration with pkg_resources - just import the
      "signedimp.pkgres" module to install the necessary hooks.
    * have custom bootstrap code create an actual "signedimp" module, so
      it's easy to tell that it has been installed.

v0.1.3

    * use fast RSA primitives when PyCrypto is installed.
    * do some simple caching to speed up imports from the same source.
    * replace imp.load_[dynamic|compiled|source] with custom wrappers.
        * necessary for good interop with py2exe and py2app, which use
          imp.load_dynamic to load DLLs from the filesystem.
    * when bootstrapping a frozen executable, check whether signedimp is
      already present and shortcut if so.
        * necessary for good interop with esky on win32, where it tries to
          chainload into the frozen executable from an existing process.

v0.1.2

    * fixed bug in pure-python b64decode method.
    * made RSAKeyWithPSS objects pickleable.
    * added RSAKey.save_to_file and RSAKey.load_from_file for storing keys 
      on disk in an encrypted format.

v0.1.1

    * implemented sign_cxfreeze_app() function, although it currently requires
      a patched interpreter to be of any real use.

v0.1.0:

    * initial release; you might say *everything* has changed.
